fix(web): reset.css reserve width for vertical scrollbars (#1994)

--- a/packages/web/reset.css
+++ b/packages/web/reset.css
@@ -3,7 +3,7 @@ body, #root, #__next {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  min-width: calc(100vw - 100%); /* Reserve the width of the scrollbar, even if it's not present */
+  min-width: calc(100vw - (100vw - 100%)); /* reserve space for scrollbar */
 }
 
 * {
